doc(getting-started): fix h2 overflowing text

--- a/docgen/src/stylesheets/components/_documentation.scss
+++ b/docgen/src/stylesheets/components/_documentation.scss
@@ -169,7 +169,7 @@
     }
 
 
-    h2, h3, .api-entry, .css-class {
+    h3, .api-entry, .css-class {
       &:before {
         content: "";
         display: block;
